crates/plotnik-lib/tests/05-typegen/recursion/error_captured_ref_via_recursive_alias.txt
A = (B)
B = {
  (debugger_statement)
  (statement_block (A) @x)? @s
}
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:4:20
  |
1 | A = (B)
  |     --- defined here
...
4 |   (statement_block (A) @x)? @s
  |                    ^^^
